--- a/app/src/main/res/layout/activity_edit_parking_info.xml
+++ b/app/src/main/res/layout/activity_edit_parking_info.xml
@@ -1,95 +1,243 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditParkingInfoActivity"
-    android:orientation="vertical">
+    android:fillViewport="true">
 
-    <EditText
-        android:id="@+id/et_name"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Name"
-        android:layout_marginTop="10dp"/>
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/et_pking"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Pking"
-        android:layout_marginTop="10dp"/>
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment2"
+            android:layout_width="500dp"
+            android:layout_height="720dp"/>
 
-    <EditText
-        android:id="@+id/et_access"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Access"
-        android:layout_marginTop="10dp"/>
 
-    <EditText
-        android:id="@+id/et_capacity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Capacity"
-        android:layout_marginTop="10dp"/>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".AddParkingActivity"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/et_capacitydis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CapacityDisabled"
-        android:layout_marginTop="10dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Dodaj parking"/>
 
-    <EditText
-        android:id="@+id/et_capacitytru"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CapacityTrucks"
-        android:layout_marginTop="10dp"/>
+            <EditText
+                android:id="@+id/et_nazwa"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:hint="Nazwa parkingu"
+                android:layout_marginTop="10dp"/>
 
-    <EditText
-        android:id="@+id/et_capacitybus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CapacityBus"
-        android:layout_marginTop="10dp"/>
+            <EditText
+                android:id="@+id/et_capacity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:hint="Wielkość parkingu (liczba miejsc)"
+                android:layout_marginTop="10dp"/>
 
-    <EditText
-        android:id="@+id/et_capacitymoto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CapacityMoto"
-        android:layout_marginTop="10dp"/>
+            <EditText
+                android:id="@+id/et_operator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:hint="Operator"
+                android:layout_marginTop="10dp"/>
 
-    <EditText
-        android:id="@+id/et_fee"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Fee"
-        android:layout_marginTop="10dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:layout_marginTop="10dp"
+                android:textAlignment="center"
+                android:text="Typ parkingu"/>
 
-    <EditText
-        android:id="@+id/et_supervised"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Supervised"
-        android:layout_marginTop="10dp"/>
+            <Spinner
+                android:id="@+id/spinner_type"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
 
-    <EditText
-        android:id="@+id/et_operator"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Operator"
-        android:layout_marginTop="10dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Dostęp"/>
 
-    <Button
-        android:id="@+id/btn_edit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="EDIT"/>
+            <Spinner
+                android:id="@+id/spinner_access"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
 
-</LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Parking płatny"/>
+
+            <Spinner
+                android:id="@+id/spinner_fee"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <EditText
+                android:id="@+id/et_cena"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:hint="Cena (zł/h)"
+                android:layout_marginTop="10dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Parking strzeżony"/>
+
+            <Spinner
+                android:id="@+id/spinner_supervised"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <Button
+                android:id="@+id/btn_hours"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ustaw godziny otwarcia"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Miejsca dla niepełnosprawnych"/>
+
+            <Spinner
+                android:id="@+id/spinner_disabled"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Miejsca dla tirów"/>
+
+            <Spinner
+                android:id="@+id/spinner_truck"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Miejsca dla busów"/>
+
+            <Spinner
+                android:id="@+id/spinner_bus"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:textAlignment="center"
+                android:text="Miejsca dla motocykli"/>
+
+            <Spinner
+                android:id="@+id/spinner_moto"
+                android:layout_height="50dp"
+                android:layout_width="280dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dropdown"
+                android:background="@android:drawable/btn_dropdown"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_marginTop="10dp" />
+
+            <Button
+                android:id="@+id/btn_create"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="STWÓRZ"
+                android:layout_marginTop="10dp"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</ScrollView>
