--- a/app/src/main/res/layout/activity_add_car.xml
+++ b/app/src/main/res/layout/activity_add_car.xml
@@ -47,7 +47,8 @@
         android:spinnerMode="dropdown"
         android:background="@android:drawable/btn_dropdown"
         android:theme="@style/ThemeOverlay.AppCompat.Light"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:entries="@array/typpojazdu"/>
 
 
     <EditText
