--- a/app/src/main/res/layout/activity_parkings_added.xml
+++ b/app/src/main/res/layout/activity_parkings_added.xml
@@ -8,11 +8,12 @@
     tools:context=".CarsAddedActivity"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/new_car"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Dodaj nowy samochód"/>
+        android:text="Historia parkingów"
+        android:textAlignment="center"
+        android:textSize="22dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
