--- a/app/src/main/res/layout/fragment_find_parks_options.xml
+++ b/app/src/main/res/layout/fragment_find_parks_options.xml
@@ -137,6 +137,7 @@
                 android:entries="@array/options"/>
 
             <TextView
+                android:id="@+id/tv_tir"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="22dp"
@@ -157,6 +158,7 @@
                 android:entries="@array/options"/>
 
             <TextView
+                android:id="@+id/tv_bus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="22dp"
@@ -177,6 +179,7 @@
                 android:entries="@array/options"/>
 
             <TextView
+                android:id="@+id/tv_moto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="22dp"
