Add custom payments

--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -12,7 +12,7 @@
         android:id="@+id/btn_pay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="zapłać"
-        android:layout_marginTop="300dp"/>
+        android:text="Platność kartą"
+        android:layout_marginTop="100dp"/>
 
 </LinearLayout>
