--- a/app/src/main/res/layout/activity_parking_booking.xml
+++ b/app/src/main/res/layout/activity_parking_booking.xml
@@ -16,10 +16,24 @@
         android:textSize="28dp"/>
 
     <Button
-        android:id="@+id/pay"
+        android:id="@+id/btn_pay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="zapłać kartą"/>
+        android:text="zapłać"
+        android:layout_marginTop="100dp"/>
+
+    <Button
+        android:id="@+id/btn_pay2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="zapłać"
+        android:layout_marginTop="10dp"/>
+
+    <Button
+        android:id="@+id/btn_pay3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="zapłać"
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
