Add edits model and functions, fix parkings creating

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -37,4 +37,12 @@
         android:layout_marginTop="170dp"
         android:text="rezerwacja"/>
 
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="220dp"
+        android:text="usuń"
+        android:visibility="invisible"/>
+
 </FrameLayout>
