Fix finding parkings layout, reservation in layout and markers

--- a/app/src/main/res/layout/activity_edit_parking_info.xml
+++ b/app/src/main/res/layout/activity_edit_parking_info.xml
@@ -123,7 +123,8 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
                 android:hint="Cena (zł/h)"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -149,7 +150,8 @@
                 android:id="@+id/btn_hours"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ustaw godziny otwarcia"/>
+                android:text="Ustaw godziny otwarcia"
+                android:visibility="gone"/>
 
             <TextView
                 android:layout_width="match_parent"
