--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -35,7 +35,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="170dp"
-        android:text="rezerwacja"/>
+        android:text="rezerwacja"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/btn_delete"
@@ -43,6 +44,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="220dp"
         android:text="usuń"
-        android:visibility="invisible"/>
+        android:visibility="gone"/>
 
 </FrameLayout>
