Change user model, add profile info activity prototype

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -34,6 +34,12 @@
         android:textSize="24dp"/>
 
     <Button
+        android:id="@+id/btn_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Informacje o profilu"/>
+
+    <Button
         android:id="@+id/btn_guy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
