Change structure of account settings

--- a/app/src/main/res/layout/activity_info_profile.xml
+++ b/app/src/main/res/layout/activity_info_profile.xml
@@ -11,26 +11,54 @@
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textAlignment="center"/>
 
     <TextView
         android:id="@+id/tv_surname"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textAlignment="center"/>
 
     <TextView
         android:id="@+id/tv_ranga"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textAlignment="center"/>
 
     <TextView
         android:id="@+id/tv_created"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textAlignment="center"/>
 
     <TextView
         android:id="@+id/tv_edited"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textAlignment="center"/>
+
+    <Button
+        android:id="@+id/btn_guy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Dane osobowe"/>
+
+    <Button
+        android:id="@+id/btn_change_pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Zmiana hasła"/>
+
+    <Button
+        android:id="@+id/btn_change_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Zmiana adresu email"/>
 
 </LinearLayout>
