--- a/app/src/main/res/layout/activity_verify_changes.xml
+++ b/app/src/main/res/layout/activity_verify_changes.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ParkingInfoActivity"
+    tools:context=".VerifyChangesActivity"
     android:orientation="vertical">
 
     <TextView
@@ -86,40 +86,17 @@
         android:textSize="22dp"/>
 
     <Button
-        android:id="@+id/btn_edit"
+        android:id="@+id/btn_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="EDYTUJ"/>
-
-    <TextView
-        android:id="@+id/tv_created"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="edit_date"
-        android:textSize="22dp"/>
-
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="edit_date"
-        android:textSize="22dp"/>
-
-    <TextView
-        android:id="@+id/tv_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="status"
-        android:textSize="22dp"/>
+        android:text="ZATWIERDŹ"/>
 
     <Button
-        android:id="@+id/btn_view"
+        android:id="@+id/btn_notpass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="PRZEJRZYJ PROPONOWANE ZMIANY"
-        android:visibility="gone"/>
+        android:text="ODRZUĆ"/>
 
 </LinearLayout>
