Add changes in user model

--- a/app/src/main/res/layout/activity_info_profile.xml
+++ b/app/src/main/res/layout/activity_info_profile.xml
@@ -43,6 +43,13 @@
         android:textSize="26dp"
         android:textAlignment="center"/>
 
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textAlignment="center"/>
+
     <Spinner
         android:id="@+id/spinner_access"
         android:layout_height="50dp"
